CoqOfSolidity/test/libsolidity/syntaxTests/errors/file_level.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Error MyError *)

(* Error MyError2 *)

(* Contract *)
Module C.
  (* Error MyError3 *)
End C.
